style.css
@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');

/* Reset */

*, *::before, *::after {
  box-sizing: border-box;
}

* {
  margin: 0;
}

body {
  line-height: 1.5;
  -webkit-font-smoothing: antialiased;
}

img, picture, video, canvas, svg {
  display: block;
  max-width: 100%;
}

input, button, textarea, select {
  font: inherit;
}

p, h1, h2, h3, h4, h5, h6 {
  overflow-wrap: break-word;
}

p {
  text-wrap: pretty;
}
h1, h2, h3, h4, h5, h6 {
  text-wrap: balance;
}

#root, #__next {
  isolation: isolate;
}

/* General Styling */

.page-container {
    display: flex;
    flex-direction: column;
}

:root {
    --bg-secondary: #e5e5e5; 
    --light: #0d9488;
    --dark: #0f766e;
    --font-weight-medium: 500;
    --font-weight-bold: 700;
    --font-weight-very-bold: 900;
}

body {
  font-family: 'Roboto', arial, Verdana, Geneva, Tahoma, sans-serif;
}

/* Header */

header {
    position: sticky;
    height: 5rem;
    background-color: white;
    display: grid;
    grid-template-columns: 4rem 1fr 9rem 9rem;
    padding: 1rem 2rem;
}

.icon-container {
    cursor: pointer;
}

header > a > img {
    border-radius: 50px;
    height: 3rem;
    width: 3rem;
    object-fit: cover;
    object-position: center;
}

.header-title {
    font-size: 2rem;
    font-weight: var(--font-weight-very-bold);
    color: var(--dark)
}

header > button {
    color: white;
    background-color: var(--dark);
    border-radius: 16px;
    margin: 0 0.5rem;
    border: none;
    transition: background-color 0.3s ease;
    font-weight: var(--font-weight-medium);
}

header > button:hover {
    background-color: var(--light);
}

/* Main */

main {
    display: flex;
    flex-direction: column;
    min-height: calc(100vh - 10rem);
    overflow-y: auto;
}

.library {
    background-color: var(--bg-secondary);
    overflow-y: auto;
    flex-grow:  1;
    padding: 2rem 10rem 2rem 10rem;
    display: grid;
    grid-template-columns: repeat(auto-fit, minmax(10rem, 1fr));
    gap: 1rem;
}

.book-card {
    background-color: white;
    border-radius: 12px;
    height: 16rem;
    min-width: 5rem;
    display: grid;
    grid-template: 9fr 1fr 1fr 1fr 1fr / 4fr 1fr;
    overflow: hidden;
    padding: 0.5rem;
}

.book-icon {
  grid-column: 1 / 3;
  overflow: hidden;
  width: 100%;
  height: auto;
  object-fit: cover;
  transform-origin: center;
  display: block;
}

.book-title,
.book-author {
  grid-column: 1 / 3;
}

.book-title,
.book-author,
.page-number {
  background-color: white;
  font-size: 0.8rem;
  color: var(--light)
}

.book-title {
  font-size: 0.9rem;
  padding-top: 0.3rem;
  line-height: 1rem;
}

.read-icon {
  grid-area: 4 / 2 / -1 / -1;
  background-color: white;
  fill: var(--dark);
}

.white-filler {
  background-color: white;
  grid-area: 5 / 1 / span 1 / span 1;
}

/* Footer */

footer {
    height: 5rem;
    display: grid;
    grid-template-rows: 1fr 1fr;
    align-items: center;
    justify-items: center;
    padding: 1rem;
}

.credit {
    display: flex;
    gap: 0.3rem;
}

footer a {
    text-decoration: none;
    color: var(--light);
    transition: color 0.3s ease;
}

footer a:hover {
  color: var(--dark);
}

.credit img {
    height: 1.2rem;
    width: 1.2rem;
}

